--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required (VERSION 3.5)
 
 add_definitions(-std=c++11)
 
+set(CMAKE_CXX_STANDARD 11)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS "${CXX_FLAGS}")
 
@@ -20,7 +21,21 @@ link_directories(/usr/local/Cellar/libuv/1*/lib)
 
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows") 
+
+include_directories("C:/Program\ Files\ (x86)/vcpkg/installed/x86-windows/include")  # At least if using vcpkg
+link_directories("C:/Program\ Files\ (x86)/vcpkg/installed/x86-windows/include/openssl")  # At least if using vcpkg
+link_directories("C:/Program\ Files\ (x86)/vcpkg/installed/x86-windows/lib")  # At least if using vcpkg
+
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows") 
 
 add_executable(pid ${sources})
 
-target_link_libraries(pid z ssl uv uWS)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows") 
+  # At least if using vcpkg
+  target_link_libraries(pid zlib ssleay32 libuv uWS)
+
+else(${CMAKE_SYSTEM_NAME} MATCHES "Windows") 
+  target_link_libraries(pid z ssl uv uWS)
+
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows") 
